--- a/palette.html
+++ b/palette.html
@@ -3,9 +3,9 @@
 <head>
     <!-- Requires chroma.js for color math; use this cdnjs version or link your own -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/chroma-js/2.4.2/chroma.min.js" integrity="sha512-zInFF17qBFVvvvFpIfeBzo7Tj7+rQxLeTJDmbxjBz5/zIr89YVbTNelNhdTT+/DCrxoVzBeUPVFJsczKbB7sew==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
-    <script src="./js/palette.js"></script>
+    <script src="./palette.js"></script>
   
-    <link rel="stylesheet" href="palette.css">
+    <link rel="stylesheet" href="./palette.css">
 </head>
 <body>
     <div class="palette_test">
