--- a/palette.html
+++ b/palette.html
@@ -3,6 +3,8 @@
 <head>
     <!-- Requires chroma.js for color math; use this cdnjs version or link your own -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/chroma-js/2.4.2/chroma.min.js" integrity="sha512-zInFF17qBFVvvvFpIfeBzo7Tj7+rQxLeTJDmbxjBz5/zIr89YVbTNelNhdTT+/DCrxoVzBeUPVFJsczKbB7sew==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
+    <!-- Also requires THREE.js v144 because that's what I use for 3D web stuff, feel free to replace this link -->
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/three.js/0.144.0/three.min.js" integrity="sha512-a+99cBAt+ou5bThiz5wJeuvXSrZVqZctMU5L8MWaLEc3PB+DPWMK3UycRong0zWYyhavY8HT0YyB/jtJD1S/yQ==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
     <script src="./palette.js"></script>
   
     <link rel="stylesheet" href="./palette.css">
